# GANav-offroad

configs/_base_/datasets/: lake_group6.py
configs/ours/: ganav_group6_lake.py
docker/: Dockerfile  docker-compose-gui-nvidia.yaml  docker-compose-gui.yaml  docker-compose.yaml
ga_nav_ros/: CMakeLists.txt  package.xml
ga_nav_ros/config/: inference.yaml
ga_nav_ros/launch/: ga_nav.launch
ga_nav_ros/scripts/: inference_ros.py
mmseg/core/evaluation/: class_names.py
mmseg/datasets/: __init__.py  lake_group6.py
tools/: test_visual.py
tools/convert_datasets/: lake_relabel6.py
trained_models/lake/: ganav_group6_lake.py
